# changeloggenerator

./: .gitignore  README.md  pyproject.toml
docs/: README.md  api-reference.md  architecture.md  module-reference.md
src/changelogger/: __main__.py  ai_analyzer.py  file_operations.py  git_operations.py  markdown_formatter.py  ui_interface.py  utils.py
